# cbudget-sok

./: .gitignore  HYPOTHESIS_HASHES.txt  README.md  pyproject.toml
.cursor/rules/: paper-latex-compile.mdc  runpod-vllm-setup.mdc
Blog Post/: .gitignore  README.md  article_submission_qa.md  blog_draft copy.md  blog_draft.md  blog_plan.md  index.html
Plan/: SoK_Context_Budget_Research_Plan.md  SoK_Context_Budget_Research_Plan_v1.md
analysis/: __init__.py  bootstrap.py  build_anatomy.py  build_c2_table.py  estimate_interactions.py  simulate_temporal_amplification.py
archive/initial-plan/: 01_problem_statement_and_related_work.md  README.md  requirements.txt
cbudget/: __init__.py  run_resume.py  runner.py  state_machine.py
cbudget/accounting/: occupancy.py  provenance.py  qwen_tokenizer.py  token_accounting.py  vllm_metrics.py
configs/: event_schema.json  provider_prices.yaml  run_statemachine.yaml
docs/: method_extraction_sheet_v1.md
results/: CLAIM_LEDGER.md  PAPER_WIRE.md  TABLES.md  c2_metrics.csv  c4_temporal.csv  calibration_gate.json  pilot_runtime.csv  provider_costs.csv  runpod_connection.env
scripts/: __init__.py  build_task_snapshots.py  debug_turn0.py  estimate_budget.py  github_create_and_push.sh  make_figures.py  make_tables.py  matrix_status.py  run_analysis_pipeline.py  run_calibration_gate.py  run_cli.py  run_experiment.py  run_freeze.py  run_matrix.py  run_stage2_gpu_integration.py  runpod_create_pod.sh  simulate_provider_cost.py  uvrun.sh  validate_accounting.py  validate_cache.py  validate_environment.py  validate_rtk_semantics.py
(+131 files in other folders)
