[project]
name = "cbudget"
version = "0.1.0"
description = "SoK Context Budget experiment harness"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "transformers>=4.45,<4.53",
]

[project.optional-dependencies]
gpu = ["transformers>=4.45,<4.53"]
analysis = ["numpy>=1.26", "pandas>=2.2"]
dev = ["pytest>=8.0"]

[project.scripts]
cbudget-run = "scripts.run_experiment:main"
cbudget-matrix = "scripts.run_matrix:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbudget", "scripts", "analysis"]
